name:                caching-calculus
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/caching-calculus#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CC
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hashable
                     , mtl
                     , monad-logger
                     , text
                     , deriving-compat
                     , recursion-schemes
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/caching-calculus
