name:                caching-calculus
version:             0.1.0.0
synopsis:            Fully cached catamorphisms
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Michael Peyton Jones 
maintainer:          me@michaelpj.com
copyright:           2017 Michael Peyton Jones
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CachingEval
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hashable
                     , mtl
                     , monad-logger
                     , text
                     , deriving-compat
                     , recursion-schemes
  default-language:    Haskell2010
